[gd_scene load_steps=17 format=3 uid="uid://ccq1fwcy6xt6k"]

[ext_resource type="Script" path="res://Player.gd" id="1_u5kap"]
[ext_resource type="PackedScene" uid="uid://jg4x5b6wruju" path="res://blender stuff/Staff.blend" id="2_m7n8n"]
[ext_resource type="Texture2D" uid="uid://bvvpkg3wb513x" path="res://addons/kenney_particle_pack/magic_03.png" id="3_xk22h"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ivh87"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mvbp5"]

[sub_resource type="Gradient" id="Gradient_ye4qc"]
offsets = PackedFloat32Array(0, 0.503401, 1)
colors = PackedColorArray(1, 0.603922, 0, 1, 1, 0.803922, 0.501961, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xrvoi"]
gradient = SubResource("Gradient_ye4qc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g4ag1"]
spread = 36.53
gravity = Vector3(0, 0, 0)
angle_min = 45.0
angle_max = 45.0
color_ramp = SubResource("GradientTexture1D_xrvoi")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ljxxb"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.847059, 0.470588, 0, 1)
albedo_texture = ExtResource("3_xk22h")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_5gcss"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("StandardMaterial3D_ljxxb")
custom_aabb = AABB(0, 0, 0, 1, 1, 1)
add_uv2 = true
size = Vector2(1, 1)
orientation = 2

[sub_resource type="Animation" id="Animation_qfui6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.539923, -0.40486, -0.243441)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Staff:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.08099, 0, 0)]
}

[sub_resource type="Animation" id="Animation_idupn"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector3(0.539923, -0.40486, -0.243441), Vector3(0.539923, -0.42463, -0.243441)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Staff:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, -2),
"update": 0,
"values": [Vector3(-1.08099, 0, 0), Vector3(-1.14375, 0, 0)]
}

[sub_resource type="Animation" id="Animation_gwfev"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.539923, -0.40486, -0.243441), Vector3(0.477421, -0.364737, -0.243441), Vector3(0.539923, -0.40486, -0.243441), Vector3(0.599263, -0.352826, -0.243441)]
}

[sub_resource type="Animation" id="Animation_7yk6x"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Staff:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.539923, -0.454181, -0.243441), Vector3(0.539923, -0.40486, -0.243441)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Staff:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(-1.34539, 0, 0), Vector3(-1.08099, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b4q1x"]
_data = {
"RESET": SubResource("Animation_qfui6"),
"idle": SubResource("Animation_idupn"),
"move": SubResource("Animation_gwfev"),
"shoot": SubResource("Animation_7yk6x")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_3q7o3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_u5kap")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_ivh87")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_mvbp5")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51309, 0)

[node name="Staff" parent="Camera3D" instance=ExtResource("2_m7n8n")]
transform = Transform3D(0.06, 0, 0, 0, 0.0282273, 0.0529454, 0, -0.0529454, 0.0282273, 0.539923, -0.40486, -0.243441)

[node name="FireCast" type="GPUParticles3D" parent="Camera3D/Staff"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0141449, 19.5721, -0.419963)
rotation_order = 0
cast_shadow = 0
lod_bias = 0.001
emitting = false
amount = 1
lifetime = 0.5
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_g4ag1")
draw_pass_1 = SubResource("PlaneMesh_5gcss")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.538502, 0.137749, -1.26273)
target_position = Vector3(0, 0, -1)
collision_mask = 2
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.05
libraries = {
"": SubResource("AnimationLibrary_b4q1x")
}

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_3q7o3")

[connection signal="health_changed" from="." to="." method="_on_health_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
